--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,238 @@
-body {
+*,
+*::before,
+a::after {
+  padding: 0;
   margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
+:root {
+  --primary-color: #0290ff;
+  --dark-color: #121212;
+  --light-color: #e8e8e8;
+}
+
+.nav, .nav-links {
+  display: flex;
+  align-items: center;
+}
+
+.nav {
+  border: 1px solid var(--light-color);
+  height: 10vh;
+  width: 100%;
+  align-items: center;
+  padding: 1.8rem 4.25rem;
+}
+
+.nav-logo {
+  font-size: 1.875rem;
+  color: var(--primary-color);
+  font-family: 'Montserrat', sans-serif;
+  margin-right: 2.375rem;
+  cursor: pointer;
+}
+
+.nav-links {
+  display: flex;
+  list-style-type: none;
+}
+
+.links {
+  margin: 1.125rem 2.563rem 0.688rem 0;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  color: var(--dark-color);
+  font-size: 0.813rem;
+  letter-spacing: 1.9px;
+}
+
+.categories {
+  color: var(--light-color);;
+}
+
+a {
+  text-decoration: none;
+}
+
+.profileContainer {
+  border: 1px solid var(--light-color);
+  padding: 0.875rem;
+  border-radius: 100%;
+  cursor: pointer;
+  margin-left: auto;
+  height: 50px;
+}
+
+/* Form */
+
+.form {
+  border-top: 1px solid var(--light-color);
+    margin: 0.5rem 4.7rem 0 4.7rem;
+    padding-bottom: 10rem;
+}
+
+.form-head {
+  color: #888;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 1.25rem;
+  letter-spacing: -0.18px;
+  margin: 1.813rem 32.75rem 1.188rem 0;
+}
+
+.input {
+  padding: 0.813rem 1.063rem;
+  border-radius: 4px;
+  border: solid 1px var(--light-color);
+  margin-right: 1rem;
+}
+
+.inputBookTitle {
+  width: 57%;
+}
+
+.AddBtn {
+  color: #fff;
+  background-color: var(--primary-color);
+  font-family: 'Roboto Slab', serif;
+  letter-spacing: 0.5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 0.813rem;
+  padding: 0.801rem 1.188rem 0.886rem 1.375rem;
+  border-radius: 3px;
+  border: none;
+  cursor: pointer;
+}
+
+.removeBtn {
+  border: none;
+  background-color: #fff;
+  color: var(--primary-color);
+  padding: 0 6px;
+    border-left: 1px solid var(--light-color);
+    border-right: 1px solid var(--light-color);
+}
+
+.books-page {
+  background-color:#fafafa;
+}
+
+.books {
+    margin: auto;
+    width: 85%;
+    padding: 30px 0;
+}
+
+.bookContainer {
+  background-color: #fff;
+  border: 1px solid var(--light-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 4px;
+  padding: 1.6rem 2rem;
+  margin-bottom: 20px;
+}
+
+.bookInfo p {
+  text-transform: capitalize;
+  font-family: 'Montserrat', sans-serif;
+  color: var(--light-color);
+  font-size: 0.875rem;
+  font-weight: bold;
+}
+
+.bookInfo h3 {
+  text-transform: capitalize;
+  font-family: 'Roboto Slab', serif;
+  font-size: 1.375rem;
+  margin-top: 0.25rem;
+}
+
+.bookInfo h5 {
+  font-family: 'Roboto Slab', serif;
+  text-transform: capitalize;
+  font-size: 0.875rem;
+  color: var(--primary-color);
+  font-weight: 200;
+}
+
+.btnsContainer {
+  font-family: 'Roboto Slab', serif;
+  display: flex;
+  color: var(--primary-color);
+  font-size: 0.875rem;
+  margin-top: 1rem;
+}
+
+.btnsContainer p {
+  margin-right: 0.5rem;
+  cursor: pointer;
+}
+
+.edit {
+  margin-left: 0.5rem;
+}
+
+.progressContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.progressPercentage {
+  text-transform: capitalize;
+  color: var(--light-color);
+  font-family: 'Montserrat', sans-serif;
+  margin-left: 1rem;
+  height: 40px;
+}
+
+.value {
+  font-size: 1.8rem;
+  color: #000;
+}
+
+.moreInfo {
+  font-family: 'Roboto Slab', serif;
+  padding: 0 70px;
+  border-left: 1px solid var(--light-color);
+}
+
+.chapterLabel {
+  text-transform: uppercase;
+  font-size: 0.813rem;
+  color: var(--light-color);;
+}
+
+.chapterValue {
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+
+.moreInfoBtn {
+  color: #fff;
+  background-color: var(--primary-color);
+  font-family: 'Roboto Slab', serif;
+  letter-spacing: 0.5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 0.813rem;
+  padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+  border-radius: 3px;
+  border: none;
+  cursor: pointer;
+}
+
+.progressBar {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background:
+    radial-gradient(closest-side, white 79%, transparent 80% 100%),
+    conic-gradient(var(--primary-color) 75%, var(--light-color) 0);
 }
