--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ a::after {
   --light-color: #e8e8e8;
 }
 
-.nav, .nav-links {
+.nav,
+.nav-links {
   display: flex;
   align-items: center;
 }
@@ -48,7 +49,7 @@ a::after {
 }
 
 .categories {
-  color: var(--light-color);;
+  color: var(--light-color);
 }
 
 a {
@@ -68,8 +69,8 @@ a {
 
 .form {
   border-top: 1px solid var(--light-color);
-    margin: 0.5rem 4.7rem 0 4.7rem;
-    padding-bottom: 10rem;
+  margin: 0.5rem 4.7rem 0 4.7rem;
+  padding-bottom: 10rem;
 }
 
 .form-head {
@@ -111,18 +112,18 @@ a {
   background-color: #fff;
   color: var(--primary-color);
   padding: 0 6px;
-    border-left: 1px solid var(--light-color);
-    border-right: 1px solid var(--light-color);
+  border-left: 1px solid var(--light-color);
+  border-right: 1px solid var(--light-color);
 }
 
 .books-page {
-  background-color:#fafafa;
+  background-color: #fafafa;
 }
 
 .books {
-    margin: auto;
-    width: 85%;
-    padding: 30px 0;
+  margin: auto;
+  width: 85%;
+  padding: 30px 0;
 }
 
 .bookContainer {
@@ -204,7 +205,7 @@ a {
 .chapterLabel {
   text-transform: uppercase;
   font-size: 0.813rem;
-  color: var(--light-color);;
+  color: var(--light-color);
 }
 
 .chapterValue {
